made file lines on the very right have a visible margin; this margin was previously lost when overflow-x was implemented; using inline-block fixes prblem

--- a/app/assets/stylesheets/note_files.scss
+++ b/app/assets/stylesheets/note_files.scss
@@ -3,25 +3,29 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/*/
 
 .newspaper {
-  -webkit-column-count: 3;
-  -moz-column-count: 3;
-  column-count: 3;
+  -webkit-column-count: 2;
+  -moz-column-count: 2;
+  column-count: 2;
+  -webkit-column-gap: 0px;
+  -webkit-column-rule: 0px;
   position: relative;
-  padding: 12px 16px 12px 8px;
+  padding: 12px 12px 12px 0px;
   box-shadow: 2px 2px 6px #555555;
   border-radius: 3px;
   overflow-x: scroll;
-  height: 400px;
+  max-height: 360px; /* add js for this=% of screen size - navbar - button onresize too*/
+  max-width: 450px;
 }
 
 .newspaper div {
-  width: 100%;
-  word-break: break-all; 
-  margin-left: 4px;
-  margin-right: 4px;
-  padding-left: 6px;
-  padding-right: 6px;
-  font-size:24px;
+  display: inline-block;
+  max-width: 100%;
+/*  word-break: break-all; */
+  margin-left: 8px;
+  margin-right: 8px;
+  padding-left: 8px;
+  padding-right: 0px;
+  font-size: 24px;
 }
 
 .file-even{
@@ -38,6 +42,8 @@
 
 .filename-checkbox input{
   margin-top: 12px;
+/*  margin-left: 12px;*/
+  margin-right: 5px;
   float: left;
 }
 
@@ -48,7 +54,7 @@
   vertical-align:middle;
   border-radius: 3px;
   box-shadow: 2px 2px 6px #555555;
-  max-width: 115px;
+  max-width: 80%;
   border: none;
   max-height: 50px;
   margin: 10px 5px 10px 5px;
